@@ -19,60 +19,41 @@
 
 package net.minecraftforge.fml.relauncher;
 
-import java.io.Closeable;
-import java.io.File;
-import java.io.FileFilter;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLClassLoader;
-import java.security.cert.Certificate;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Calendar;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.function.ToIntFunction;
-import java.util.jar.Attributes;
-import java.util.jar.JarFile;
-import java.util.jar.Manifest;
-
+import com.google.common.base.Strings;
+import com.google.common.collect.*;
+import com.google.common.primitives.Ints;
 import net.minecraft.launchwrapper.ITweaker;
 import net.minecraft.launchwrapper.Launch;
 import net.minecraft.launchwrapper.LaunchClassLoader;
+import net.minecraftforge.common.ForgeEarlyConfig;
+import net.minecraftforge.common.ForgeVersion;
 import net.minecraftforge.fml.common.CertificateHelper;
 import net.minecraftforge.fml.common.FMLLog;
 import net.minecraftforge.fml.common.asm.ASMTransformerWrapper;
 import net.minecraftforge.fml.common.asm.transformers.ModAccessTransformer;
 import net.minecraftforge.fml.common.launcher.FMLInjectionAndSortingTweaker;
 import net.minecraftforge.fml.common.launcher.FMLTweaker;
-import net.minecraftforge.fml.relauncher.IFMLLoadingPlugin.DependsOn;
-import net.minecraftforge.fml.relauncher.IFMLLoadingPlugin.MCVersion;
-import net.minecraftforge.fml.relauncher.IFMLLoadingPlugin.Name;
-import net.minecraftforge.fml.relauncher.IFMLLoadingPlugin.SortingIndex;
-import net.minecraftforge.fml.relauncher.IFMLLoadingPlugin.TransformerExclusions;
+import net.minecraftforge.fml.relauncher.IFMLLoadingPlugin.*;
 import net.minecraftforge.fml.relauncher.libraries.Artifact;
 import net.minecraftforge.fml.relauncher.libraries.LibraryManager;
 import net.minecraftforge.fml.relauncher.libraries.Repository;
-
-import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
-import com.google.common.collect.ObjectArrays;
-import com.google.common.collect.Sets;
-import com.google.common.primitives.Ints;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.core.LoggerContext;
-import org.spongepowered.asm.launch.MixinTweaker;
+import org.spongepowered.asm.service.mojang.MixinServiceLaunchWrapper;
+import org.spongepowered.asm.util.Constants;
+
+import java.io.*;
+import java.net.MalformedURLException;
+import java.security.cert.Certificate;
+import java.util.*;
+import java.util.function.ToIntFunction;
+import java.util.jar.Attributes;
+import java.util.jar.JarFile;
+import java.util.jar.Manifest;
 
 public class CoreModManager {
     private static final Attributes.Name COREMODCONTAINSFMLMOD = new Attributes.Name("FMLCorePluginContainsFMLMod");
+    private static final Attributes.Name FORCELOADASMOD = new Attributes.Name("ForceLoadAsMod");
     private static final Attributes.Name MODTYPE = new Attributes.Name("ModType");
     private static String[] rootPlugins = { "net.minecraftforge.fml.relauncher.FMLCorePlugin", "net.minecraftforge.classloading.FMLForgePlugin", "net.minecraftforge.fml.relauncher.MixinBooterPlugin" };
     private static List<String> ignoredModFiles = Lists.newArrayList();
@@ -114,7 +95,11 @@ public class CoreModManager {
         @Override
         public String toString()
         {
-            return String.format("%s {%s}", this.name, this.predepends);
+            if (this.predepends.isEmpty()) {
+                return this.name;
+            } else {
+                return String.format("%s {%s}", this.name, this.predepends);
+            }
         }
 
         @Override
@@ -128,7 +113,8 @@ public class CoreModManager {
         {
             FMLLog.log.debug("Injecting coremod {} \\{{}\\} class transformers", name, coreModInstance.getClass().getName());
             List<String> ts = Lists.newArrayList();
-            if (coreModInstance.getASMTransformerClass() != null) for (String transformer : coreModInstance.getASMTransformerClass())
+            String[] asmTransformerClass = coreModInstance.getASMTransformerClass();
+            if (asmTransformerClass != null) for (String transformer : asmTransformerClass)
             {
                 FMLLog.log.trace("Registering transformer {}", transformer);
                 classLoader.registerTransformer(ASMTransformerWrapper.getTransformerWrapper(classLoader, transformer, name));
@@ -143,8 +129,8 @@ public class CoreModManager {
             }
             FMLLog.log.debug("Injection complete");
 
-            FMLLog.log.debug("Running coremod plugin for {} \\{{}\\}", name, coreModInstance.getClass().getName());
-            Map<String, Object> data = new HashMap<String, Object>();
+            FMLLog.log.debug("Running coremod plugin for {} {{}}", name, coreModInstance.getClass().getName());
+            Map<String, Object> data = new HashMap<>();
             data.put("mcLocation", mcDir);
             data.put("coremodList", loadPlugins);
             data.put("runtimeDeobfuscationEnabled", !deobfuscatedEnvironment);
@@ -156,8 +142,8 @@ public class CoreModManager {
             {
                 try
                 {
-                    IFMLCallHook call = (IFMLCallHook) Class.forName(setupClass, true, classLoader).newInstance();
-                    Map<String, Object> callData = new HashMap<String, Object>();
+                    IFMLCallHook call = (IFMLCallHook) Class.forName(setupClass, true, classLoader).getConstructor().newInstance();
+                    Map<String, Object> callData = new HashMap<>();
                     callData.put("runtimeDeobfuscationEnabled", !deobfuscatedEnvironment);
                     callData.put("mcLocation", mcDir);
                     callData.put("classLoader", classLoader);
@@ -241,7 +227,7 @@ public class CoreModManager {
             throw new RuntimeException("The patch transformer failed to load! This is critical, loading cannot continue!", e);
         }
 
-        loadPlugins = new ArrayList<FMLPluginWrapper>();
+        loadPlugins = new ArrayList<>();
         for (String rootPluginName : rootPlugins)
         {
             loadCoreMod(classLoader, rootPluginName, new File(FMLTweaker.getJarLocation()));
@@ -339,6 +325,7 @@ public class CoreModManager {
         FMLLog.log.debug("Discovering coremods");
         List<Artifact> maven_canidates = LibraryManager.flattenLists(mcDir);
         List<File> file_canidates = LibraryManager.gatherLegacyCanidates(mcDir);
+        Set<String> mixin_configs = new HashSet<>();
 
         for (Artifact artifact : maven_canidates)
         {
@@ -355,10 +342,18 @@ public class CoreModManager {
 
         for (File coreMod : file_canidates)
         {
+            if (coreMod.isDirectory())
+            {
+                continue;
+            }
             FMLLog.log.debug("Examining for coremod candidacy {}", coreMod.getName());
             JarFile jar = null;
             Attributes mfAttributes;
             String fmlCorePlugin;
+            String configs;
+            String cascadedTweaker;
+            File mods_ver = new File(new File(Launch.minecraftHome, "mods"), ForgeVersion.mcVersion);
+            boolean containNonMods, ignoreMods = false;
             try
             {
                 File manifest = new File(coreMod.getAbsolutePath() + ".meta");
@@ -393,30 +388,58 @@ public class CoreModManager {
                         jar = new JarFile(coreMod);
                     ModAccessTransformer.addJar(jar, ats);
                 }
-
-                String cascadedTweaker = mfAttributes.getValue("TweakClass");
+                configs = mfAttributes.getValue(Constants.ManifestAttributes.MIXINCONFIGS);
+                cascadedTweaker = mfAttributes.getValue("TweakClass");
+                containNonMods = Boolean.parseBoolean(mfAttributes.getValue("NonModDeps"));
                 if (cascadedTweaker != null)
                 {
+                    if (containNonMods) {
+                        for (String file: mfAttributes.getValue(LibraryManager.MODCONTAINSDEPS).split(" ")) {
+                            classLoader.addURL(new File(mods_ver, file).getAbsoluteFile().toURI().toURL());
+                        }
+                    }
                     FMLLog.log.info("Loading tweaker {} from {}", cascadedTweaker, coreMod.getName());
                     Integer sortOrder = Ints.tryParse(Strings.nullToEmpty(mfAttributes.getValue("TweakOrder")));
                     sortOrder = (sortOrder == null ? Integer.valueOf(0) : sortOrder);
                     handleCascadingTweak(coreMod, jar, cascadedTweaker, classLoader, sortOrder);
+                    if (!Strings.isNullOrEmpty(configs))
+                        for (String singleMixinConfig : configs.split(","))
+                            mixin_configs.add(singleMixinConfig.trim());
                     ignoredModFiles.add(coreMod.getName());
-                    continue;
+                    if (!MixinServiceLaunchWrapper.MIXIN_TWEAKER_CLASS.equals(cascadedTweaker)) {
+                        continue;
+                    }
                 }
                 List<String> modTypes = mfAttributes.containsKey(MODTYPE) ? Arrays.asList(mfAttributes.getValue(MODTYPE).split(",")) : ImmutableList.of("FML");
 
-                if (!modTypes.contains("FML"))
+                if (!modTypes.contains("FML") && !modTypes.contains("CRL"))
                 {
                     FMLLog.log.debug("Adding {} to the list of things to skip. It is not an FML mod, it has types {}", coreMod.getName(), modTypes);
                     ignoredModFiles.add(coreMod.getName());
                     continue;
                 }
                 fmlCorePlugin = mfAttributes.getValue("FMLCorePlugin");
+                for (String plugin : ForgeEarlyConfig.LOADING_PLUGIN_BLACKLIST) {
+                    if (plugin.equals(fmlCorePlugin)) {
+                        ignoreMods = true;
+                        break;
+                    }
+                }
+                if (ignoreMods) {
+                    ignoredModFiles.add(coreMod.getName());
+                    FMLLog.log.warn("The mod with loading plugin {} is in blacklist and won't be loaded. Check forge_early.cfg for more info.", fmlCorePlugin);
+                    continue;
+                }
                 if (fmlCorePlugin == null)
                 {
                     // Not a coremod
                     FMLLog.log.debug("Not found coremod data in {}", coreMod.getName());
+                    if (MixinServiceLaunchWrapper.MIXIN_TWEAKER_CLASS.equals(cascadedTweaker) && (mfAttributes.containsKey(COREMODCONTAINSFMLMOD) || mfAttributes.containsKey(FORCELOADASMOD))) {
+                        FMLLog.log.info("Found FMLCorePluginContainsFMLMod marker in mixin container {}.",
+                                coreMod.getName());
+                        candidateModFiles.add(coreMod.getName());
+                        ignoredModFiles.remove(coreMod.getName());
+                    }
                     continue;
                 }
             }
@@ -432,17 +455,23 @@ public class CoreModManager {
             // Support things that are mod jars, but not FML mod jars
             try
             {
+                if (containNonMods) {
+                    for (String file: mfAttributes.getValue(LibraryManager.MODCONTAINSDEPS).split(" ")) {
+                        classLoader.addURL(new File(mods_ver, file).getAbsoluteFile().toURI().toURL());
+                    }
+                }
                 classLoader.addURL(coreMod.toURI().toURL());
-                if (!mfAttributes.containsKey(COREMODCONTAINSFMLMOD))
+                if (!Strings.isNullOrEmpty(configs))
+                    mixin_configs.addAll(List.of(configs.split(",")));
+                if (!(mfAttributes.containsKey(COREMODCONTAINSFMLMOD) || mfAttributes.containsKey(FORCELOADASMOD)))
                 {
                     FMLLog.log.trace("Adding {} to the list of known coremods, it will not be examined again", coreMod.getName());
                     ignoredModFiles.add(coreMod.getName());
-                }
-                else
-                {
-                    FMLLog.log.warn("Found FMLCorePluginContainsFMLMod marker in {}. This is not recommended, @Mods should be in a separate jar from the coremod.",
+                } else {
+                    FMLLog.log.info("Found FMLCorePluginContainsFMLMod marker in {}.",
                             coreMod.getName());
                     candidateModFiles.add(coreMod.getName());
+                    ignoredModFiles.remove(coreMod.getName());
                 }
             }
             catch (MalformedURLException e)
@@ -452,21 +481,16 @@ public class CoreModManager {
             }
             loadCoreMod(classLoader, fmlCorePlugin, coreMod);
         }
+        String devConfigs = System.getProperty("cleanroom.dev.mixin");
+        if (!Strings.isNullOrEmpty(devConfigs)) {
+            for (String singleMixinConfig : devConfigs.split(","))
+                mixin_configs.add(singleMixinConfig.trim());
+        }
+        Launch.blackboard.put(Constants.ManifestAttributes.MIXINCONFIGS, mixin_configs);
     }
-    private static Field UCP;
-    private static Method ADDURL;
-
     private static void handleCascadingTweak(File coreMod, JarFile jar, String cascadedTweaker, LaunchClassLoader classLoader, Integer sortingOrder) throws MalformedURLException {
         try
         {
-            // Have to manually stuff the tweaker into the parent classloader
-            if (UCP == null || ADDURL == null)
-            {
-                UCP = classLoader.getClass().getClassLoader().getClass().getSuperclass().getDeclaredField("ucp");
-                UCP.setAccessible(true);
-                ADDURL = UCP.get(classLoader.getClass().getClassLoader()).getClass().getDeclaredMethod("addURL", URL.class);
-            }
-            ADDURL.invoke(UCP.get(classLoader.getClass().getClassLoader()), coreMod.toURI().toURL());
             classLoader.addURL(coreMod.toURI().toURL());
             CoreModManager.tweaker.injectCascadingTweak(cascadedTweaker);
             tweakSorting.put(cascadedTweaker,sortingOrder);
@@ -528,16 +552,16 @@ public class CoreModManager {
             FMLLog.log.debug("Instantiating coremod class {}", coreModName);
             classLoader.addTransformerExclusion(coreModClass);
             Class<?> coreModClazz = Class.forName(coreModClass, true, classLoader);
-            Name coreModNameAnn = coreModClazz.getAnnotation(IFMLLoadingPlugin.Name.class);
+            Name coreModNameAnn = coreModClazz.getAnnotation(Name.class);
             if (coreModNameAnn != null && !Strings.isNullOrEmpty(coreModNameAnn.value()))
             {
                 coreModName = coreModNameAnn.value();
                 FMLLog.log.trace("coremod named {} is loading", coreModName);
             }
-            MCVersion requiredMCVersion = coreModClazz.getAnnotation(IFMLLoadingPlugin.MCVersion.class);
+            MCVersion requiredMCVersion = coreModClazz.getAnnotation(MCVersion.class);
             if (!Arrays.asList(rootPlugins).contains(coreModClass) && (requiredMCVersion == null || Strings.isNullOrEmpty(requiredMCVersion.value())))
             {
-                FMLLog.log.warn("The coremod {} does not have a MCVersion annotation, it may cause issues with this version of Minecraft",
+                FMLLog.log.debug("The coremod {} does not have a MCVersion annotation, it may cause issues with this version of Minecraft",
                         coreModClass);
             }
             else if (requiredMCVersion != null && !FMLInjectionData.mccversion.equals(requiredMCVersion.value()))
@@ -551,7 +575,7 @@ public class CoreModManager {
                 FMLLog.log.debug("The coremod {} requested minecraft version {} and minecraft is {}. It will be loaded.", coreModClass,
                         requiredMCVersion.value(), FMLInjectionData.mccversion);
             }
-            TransformerExclusions trExclusions = coreModClazz.getAnnotation(IFMLLoadingPlugin.TransformerExclusions.class);
+            TransformerExclusions trExclusions = coreModClazz.getAnnotation(TransformerExclusions.class);
             if (trExclusions != null)
             {
                 for (String st : trExclusions.value())
@@ -559,13 +583,13 @@ public class CoreModManager {
                     classLoader.addTransformerExclusion(st);
                 }
             }
-            DependsOn deplist = coreModClazz.getAnnotation(IFMLLoadingPlugin.DependsOn.class);
+            DependsOn deplist = coreModClazz.getAnnotation(DependsOn.class);
             String[] dependencies = new String[0];
             if (deplist != null)
             {
                 dependencies = deplist.value();
             }
-            SortingIndex index = coreModClazz.getAnnotation(IFMLLoadingPlugin.SortingIndex.class);
+            SortingIndex index = coreModClazz.getAnnotation(SortingIndex.class);
             int sortIndex = index != null ? index.value() : 0;
 
             Certificate[] certificates = coreModClazz.getProtectionDomain().getCodeSource().getCertificates();
@@ -582,7 +606,7 @@ public class CoreModManager {
                 }
                 else // This is a probably a normal minecraft workspace - log at warn
                 {
-                    FMLLog.log.warn("The coremod {} ({}) is not signed!", coreModName, coreModClass);
+                    FMLLog.log.debug("The coremod {} ({}) is not signed!", coreModName, coreModClass);
                 }
             }
             else
@@ -604,6 +628,7 @@ public class CoreModManager {
             FMLPluginWrapper wrap = new FMLPluginWrapper(coreModName, plugin, location, sortIndex, dependencies);
             loadPlugins.add(wrap);
             FMLLog.log.debug("Enqueued coremod {}", coreModName);
+            MixinBooterPlugin.queneEarlyMixinLoader(plugin);
             return wrap;
         }
         catch (ClassNotFoundException cnfe)
@@ -641,14 +666,11 @@ public class CoreModManager {
         @SuppressWarnings("unchecked")
         List<ITweaker> tweakers = (List<ITweaker>) Launch.blackboard.get("Tweaks");
         // Add the sorting tweaker first- it'll appear twice in the list
-        tweakers.add(0, fmlInjectionAndSortingTweaker);
-        for (FMLPluginWrapper wrapper : loadPlugins)
-        {
-            tweakers.add(wrapper);
-        }
+        tweakers.addFirst(fmlInjectionAndSortingTweaker);
+        tweakers.addAll(loadPlugins);
     }
 
-    private static Map<String,Integer> tweakSorting = Maps.newHashMap();
+    private static final Map<String,Integer> tweakSorting = Maps.newHashMap();
 
     public static void sortTweakList()
     {
@@ -656,7 +678,7 @@ public class CoreModManager {
         List<ITweaker> tweakers = (List<ITweaker>) Launch.blackboard.get("Tweaks");
         // Basically a copy of Collections.sort pre 8u20, optimized as we know we're an array list.
         // Thanks unhelpful fixer of http://bugs.java.com/view_bug.do?bug_id=8032636
-        ITweaker[] toSort = tweakers.toArray(new ITweaker[tweakers.size()]);
+        ITweaker[] toSort = tweakers.toArray(new ITweaker[0]);
         ToIntFunction<ITweaker> getOrder = o -> o instanceof FMLInjectionAndSortingTweaker ? Integer.MIN_VALUE : o instanceof FMLPluginWrapper ? ((FMLPluginWrapper)o).sortIndex : tweakSorting.getOrDefault(o.getClass().getName(), 0);
         Arrays.sort(toSort, (o1, o2) -> Ints.saturatedCast((long)getOrder.applyAsInt(o1) - (long)getOrder.applyAsInt(o2)));
         for (int j = 0; j < toSort.length; j++) {
@@ -682,7 +704,7 @@ public class CoreModManager {
         }
     }
 
-    private  static void closeQuietly(Closeable closeable) {
+    private static void closeQuietly(Closeable closeable) {
         try {
             if (closeable != null)
                 closeable.close();
